--- a/ninja_challenge/ninja.html
+++ b/ninja_challenge/ninja.html
@@ -10,5 +10,33 @@
     <div id="background">
         <div id="character" style="position:absolute; top: 100px; left: 450px; background-image: url('img/down1.png'); width: 59px; height: 86px;"></div>
     </div>
+    <script type="text/javascript">
+        var leftValue = 450;
+        var topValue = 100;
+
+        function movement() {
+            document.getElementById("character").style.left = leftValue + "px";
+            document.getElementById("character").style.top = topValue + "px";
+        }
+
+        document.onkeydown = function(e) {
+            console.log(e);
+            if (e.keyCode == 37) { // left
+                leftValue = leftValue - 10;
+            }
+            else if (e.keyCode == 39) { //right
+                leftValue = leftValue + 10;
+            }
+            else if (e.keyCode == 40) { // down
+                topValue = topValue + 10;
+            }
+            else if (e.keyCode == 38) { // up
+                topValue = topValue - 10;
+            }
+            movement();
+        }
+
+
+    </script>
 </body>
 </html>
