--- a/ninja_challenge/ninja.html
+++ b/ninja_challenge/ninja.html
@@ -24,7 +24,7 @@
             if (e.keyCode == 37) { // left
                 leftValue = leftValue - 10;
             }
-            else if (e.keyCode == 39) { //right
+            else if (e.keyCode == 39 && leftValue) { //right
                 leftValue = leftValue + 10;
             }
             else if (e.keyCode == 40) { // down
