--- a/ninja_challenge/ninja.html
+++ b/ninja_challenge/ninja.html
@@ -21,16 +21,16 @@
 
         document.onkeydown = function(e) {
             console.log(e);
-            if (e.keyCode == 37) { // left
+            if (e.keyCode == 37 && leftValue > 0) { // left
                 leftValue = leftValue - 10;
             }
-            else if (e.keyCode == 39 && leftValue) { //right
+            else if (e.keyCode == 39 && leftValue < 500) { //right
                 leftValue = leftValue + 10;
             }
-            else if (e.keyCode == 40) { // down
+            else if (e.keyCode == 40 && topValue < 500) { // down
                 topValue = topValue + 10;
             }
-            else if (e.keyCode == 38) { // up
+            else if (e.keyCode == 38 && topValue > 0) { // up
                 topValue = topValue - 10;
             }
             movement();
