Fix image url in movement function.

--- a/ninja_challenge/ninja.html
+++ b/ninja_challenge/ninja.html
@@ -18,7 +18,7 @@
         function movement() {
             document.getElementById("character").style.left = leftValue + "px";
             document.getElementById("character").style.top = topValue + "px";
-            document.getElementById("character").style.backgroundImage = url('img/' + "imgDirection" + '1.png');
+            document.getElementById("character").style.backgroundImage = "url('img/" + imgDirection + "1.png')";
         }
 
         document.onkeydown = function(e) {
