Finish ninja_challenge 2. used if-else statement to change background image for walking.

--- a/ninja_challenge/ninja.html
+++ b/ninja_challenge/ninja.html
@@ -40,6 +40,7 @@
                 topValue = topValue - 10;
                 imgDirection = 'top';
             }
+            // Used an if-else statement to change image directdion
             if (numWalk == 1) {
                 numWalk = 2;
             }
