Add grid to body

--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -48,6 +48,41 @@
 </head>
 <body>
     <div id="world"></div>
+        <div class = 'row'>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+        </div>
+        <div class = 'row'>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+        </div>
+        <div class = 'row'>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+        </div>
+        <div class = 'row'>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+        </div>
+        <div class = 'row'>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+            <div class='wall'></div>
+        </div>
     <div id="ninjaman"></div>
 </body>
 <script type="text/javascript">
