Got the rows to show up... needed to add the function call

--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -48,7 +48,6 @@
 </head>
 <body>
     <div id="world"></div>
-        
     <div id="ninjaman"></div>
 </body>
 <script type="text/javascript">
@@ -69,15 +68,17 @@
         output = "";
 
         for (var row = 0; row < world.length; row++) {
-            output += "<div class = 'row'></div>";
-            // for (var x = 0; x < world[row].length; x++) {
-            //     output += "<div class = '" + worldDict[world[row][x]] + "'></div>"
-            // }
-            // output += "</div"
+            output += "<div class = 'row'>";
+            for (var x = 0; x < world[row].length; x++) {
+                output += "<div class = '" + worldDict[world[row][x]] + "'></div>"
+            }
+            output += "</div"
         }
 
         document.getElementById('world').innerHTML = output;
     }
+
+    drawWorld();
 
 
 </script>
