--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -69,10 +69,10 @@
 
         for (var row = 0; row < world.length; row++) {
             output += "<div class = 'row'>";
-                // for (var x = 0; x < world[row].length; x++) {
-                //     output += "<div class = '" + worldDict[world[row][x]] + "'></div>"
-                // }
-            output += "</div"
+                for (var x = 0; x < world[row].length; x++) {
+                    output += "<div class = '" + worldDict[world[row][x]] + "'></div>"
+                }
+            output += "</div>"
         }
 
         document.getElementById('world').innerHTML = output;
