--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -100,26 +100,28 @@
 
     document.onkeydown = function(e) {
         if (e.keyCode == 37) { // left
-            if (world[ninjaman.y] [ninjaman.x-1] != 1) {
+            if (world[ninjaman.y][ninjaman.x-1] != 1) {
                 ninjaman.x--;
             }
         }
         if (e.keyCode == 39) { // right
-            if (world[ninjaman.y] [ninjaman.x+1] != 1) {
+            if (world[ninjaman.y][ninjaman.x+1] != 1) {
             ninjaman.x++;
             }
         }
         if (e.keyCode == 38) { // up
-            if (world[ninjaman.y-1] [ninjaman.x] != 1) {
+            if (world[ninjaman.y-1][ninjaman.x] != 1) {
             ninjaman.y--;
             }
         }
         if (e.keyCode == 40) { // down
-            if (world[ninjaman.y+1] [ninjaman.x] != 1) {
+            if (world[ninjaman.y+1][ninjaman.x] != 1) {
             ninjaman.y++;
             }
         }     
+        world[ninjaman.y][ninjaman.x] = 0;
         drawNinjaman();
+        drawWorld();
     }
 
 
