Add if statement and value total to count how many sushi squares are eaten by ninjaman. The is priinted to console. Not sure what assignment wanted me to do with this value? It wasn't specified.

--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -98,6 +98,7 @@
 
     drawNinjaman();
 
+    var total = 0;
     document.onkeydown = function(e) {
         if (e.keyCode == 37) { // left
             if (world[ninjaman.y][ninjaman.x-1] != 1) {
@@ -119,6 +120,11 @@
             ninjaman.y++;
             }
         }     
+        
+        if (world[ninjaman.y][ninjaman.x] == 2) {
+            total++;
+        }
+        console.log(total);
         world[ninjaman.y][ninjaman.x] = 0;
         drawNinjaman();
         drawWorld();
