Create totalPts value and log to console where sushi = 10 pts each and onigiri = 5 pts each. Total suchi should be 160 pts when all eaten.

--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -109,6 +109,7 @@
 
     var sushiTotal = 0;
     var onigiriTotal = 0;
+    var totalPts = 0;
 
     document.onkeydown = function(e) {
         if (e.keyCode == 37) { // left
@@ -136,13 +137,16 @@
 
         if (world[ninjaman.y][ninjaman.x] == 2) {
             sushiTotal++;
+            totalPts += 10;
         } else if (world[ninjaman.y][ninjaman.x] == 3) {
             onigiriTotal++;
+            totalPts += 5;
         }
         
-        // print total sushi to console
-        console.log('sushi total: ' + sushiTotal);
-        console.log('Onigiri total: ' + onigiriTotal);
+        // print total points to console
+        // console.log('sushi total: ' + sushiTotal);
+        // console.log('Onigiri total: ' + onigiriTotal);
+        console.log('Total points: ' + totalPts);
         world[ninjaman.y][ninjaman.x] = 0;
         drawNinjaman();
         drawWorld();
