Correction: total pts should be 180 pts from eating all sushi and onirgiri.

--- a/ninjaman/ninjaman.html
+++ b/ninjaman/ninjaman.html
@@ -134,6 +134,7 @@
         }     
         // count the number of sushi and onigiri squares eaten
         // count sushi = 10 pts and onigiri = 5 pts
+        // totalPts should = 180 pts.
 
         if (world[ninjaman.y][ninjaman.x] == 2) {
             sushiTotal++;
