Add images and set up initial airplane.html file

--- a/airplane_challenge/airplane.html
+++ b/airplane_challenge/airplane.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airplane Challenge</title>
+    <style type="text/css">
+        #ocean {
+            background-image: url('img/ocean.jpg');
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="ocean"></div>
 </body>
+<script type="text/javascript">
+
+</script>>
 </html>
