Add player and enemies div, & player styling

--- a/airplane_challenge/airplane.html
+++ b/airplane_challenge/airplane.html
@@ -8,11 +8,23 @@
     <style type="text/css">
         #ocean {
             background-image: url('img/ocean.jpg');
+            width: 900px;
+            height: 700px;
+        }
+        .player {
+            background-image: url('img/player.png');
+            width: 70px;
+            height: 75px;
         }
     </style>
 </head>
 <body>
-    <div id="ocean"></div>
+    <div id="ocean">
+        <div id="players">
+            <div class="player"></div>
+        </div>
+        <div id="enemies"></div>
+    </div>
 </body>
 <script type="text/javascript">
 
