Add player and enemy initial styles

--- a/airplane_challenge/airplane.html
+++ b/airplane_challenge/airplane.html
@@ -12,7 +12,14 @@
             height: 700px;
         }
         .player {
+            position: absolute;
             background-image: url('img/player.png');
+            width: 70px;
+            height: 75px;
+        }
+        .enemy {
+            position: absolute;
+            background-image: url('img/enemy.png');
             width: 70px;
             height: 75px;
         }
