--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raven Challenge</title>
+    <title>Raven vd Hawk Challenge</title>
     <style type="text/css">
         #ocean {
             background-image: url('img/mountain_impressionEvergreen_danMiller_sm.jpeg');
