got raven to be transparent background

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -13,9 +13,9 @@
         }
         .player {
             position: absolute;
-            background-image: url('img/raven_sm.png');
-            width: 138px; /* was 70 */
-            height: 100px; /* was 75 */
+            background-image: url('img/raven_stand_sm.png');
+            width: 100px; /* was 70 */
+            height: 90px; /* was 75 */
         }
         .enemy {
             position: absolute;
