Hawk now transparent and updated

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -19,9 +19,9 @@
         }
         .enemy {
             position: absolute;
-            background-image: url('img/brown-bird_sm.png');
+            background-image: url('img/owl_sm.png');
             width: 100px; /* was 70 */
-            height: 91px; /* was 75 */
+            height: 96px; /* was 75 */
         }
     </style>
 </head>
