Update owl as enemy

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -11,13 +11,13 @@
             width: 900px;
             height: 627px; /* was 700 */
         }
-        .player {
+        .player { /* raven */
             position: absolute;
             background-image: url('img/raven_stand_sm.png');
             width: 100px; /* was 70 */
             height: 90px; /* was 75 */
         }
-        .enemy {
+        .enemy { /* owl */
             position: absolute;
             background-image: url('img/owl_sm.png');
             width: 100px; /* was 70 */
