--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raven vs Hawk Challenge</title>
+    <title>Earl vs Hawk Challenge</title>
     <style type="text/css">
         /* background mountain image is by Impressions Evergreen - Dan Miller
 https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil.html */
@@ -25,12 +25,19 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
             width: 100px;
             height: 96px;
         }
+        .missile {
+            position: absolute;
+            width: 2px;
+            height: 10px;
+            background-color: red;
+        }
     </style>
 </head>
 <body>
     <div id="mountain">
         <div id="players"></div>
         <div id="enemies"></div>
+        <div id="missiles"></div>
     </div>
 </body>
 <script type="text/javascript">
@@ -47,11 +54,13 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
         {left: 700, top: 200}
     ]
 
+    var missiles = [];
+
     function drawPlayer() {
         content = " <div class='player' style='left:"+ player.left +"px; top:"+ player.top +"px'></div>";
         document.getElementById("players").innerHTML = content;
     }
-    drawPlayer();
+    // drawPlayer();
 
     function drawEnemies() {
         content = "";
@@ -61,7 +70,25 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
         }
         document.getElementById("enemies").innerHTML = content;
     }
-    drawEnemies();
+    // drawEnemies();
+
+    function drawMissiles() {
+        content = "";
+        for (var i=0; i < missiles.length; i++) {
+            content += "<div class='missile' style='left:" + missiles[i].left + "px; top=" + missiles[i].top + "px'></div>";
+        }
+        document.getElementById("missiles").innerHTML = content;
+    }
+    // drawMissiles();
+
+    function moveEnemies() {
+        for (var i=0; i<enemies.length; i++) {
+            enemies[i].top += 5;
+        }
+
+
+    }
+    // moveEnemies();
 
     document.onkeydown = function(e) {
         if (e.keyCode == 37) { // left
@@ -82,10 +109,26 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
                 player.top += 10;
             }
         }
+        if (e.keyCode == 32) { // fire
+            console.log(player.top);
+            missiles.push({left: (player.left+33), top: (player.top-8)});
+        }
+        console.log(missiles);
+        drawMissiles();
         drawPlayer();
     }
 
-    
+    function gameLoop() {
+        console.log('gameLoop is running');
+
+        drawPlayer();
+
+        moveEnemies();
+        drawEnemies();
+
+        setTimeout(gameLoop, 1000);
+    }
+    gameLoop();
 
 
 </script>
