Fix enemies img (owl)

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -21,9 +21,9 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
         }
         .enemy { /* owl */
             position: absolute;
-            background-image: url('img/owl_sm.png');
+            background-image: url('img/owl_sm1.png');
             width: 100px;
-            height: 96px;
+            height: 62px;
         }
         .missile {
             position: absolute;
@@ -126,7 +126,7 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
         moveEnemies();
         drawEnemies();
 
-        setTimeout(gameLoop, 1000);
+        setTimeout(gameLoop, 500);
     }
     gameLoop();
 
