Update title of page

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earl vs Hawk Challenge</title>
+    <title>Earl vs Hawks Challenge</title>
     <style type="text/css">
         /* background mountain image is by Impressions Evergreen - Dan Miller
 https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil.html */
