Changed a = to a : on line 78 for the content generation. That fixed the current issue.

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -75,7 +75,7 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
     function drawMissiles() {
         content = "";
         for (var i=0; i < missiles.length; i++) {
-            content += "<div class='missile' style='left:" + missiles[i].left + "px; top=" + missiles[i].top + "px'></div>";
+            content += "<div class='missile' style='left:" + missiles[i].left + "px; top:" + missiles[i].top + "px'></div>";
         }
         document.getElementById("missiles").innerHTML = content;
     }
