Re-position the missile start from the player

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -111,7 +111,7 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
         }
         if (e.keyCode == 32) { // fire
             console.log(player.top);
-            missiles.push({left: (player.left+33), top: (player.top-8)});
+            missiles.push({left: (player.left+13), top: (player.top)});
         }
         console.log(missiles);
         drawMissiles();
