Change missle color to orange

--- a/airplane_challenge/raven.html
+++ b/airplane_challenge/raven.html
@@ -29,7 +29,7 @@ https://www.impressionevergreen.com/2017/12/mount-sneffels-summer-colored-pencil
             position: absolute;
             width: 2px;
             height: 10px;
-            background-color: blue;
+            background-color: orange;
         }
     </style>
 </head>
